--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
 
 body {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  font-family: 'Poppins', sans-serif; }
 
 .soundkit-wrapper {
   width: 100vw;
