--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
   background: $boxBg;
   color: $white;
 
-  .record-button {
+  .record-button, .play-button {
     display: inline-block;
     cursor: pointer;
     padding: 10px 15px;
