--- a/style.scss
+++ b/style.scss
@@ -10,21 +10,23 @@ body {
 
 .soundkit-wrapper {
   width: 100vw;
-  height: 85vh;
-
+  height: 70vh;
   display: flex;
   justify-content: center;
   background: $black;
 }
 
 .footer {
-  height: 15vh;
-  padding: 0 30px;
+  height: 30vh;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   background: $boxBg;
   color: $white;
+  &__wrapper {
+    width: 100%;
+  }
 
   .record-button, .play-button {
     display: inline-block;
@@ -32,5 +34,12 @@ body {
     padding: 10px 15px;
     border: 1px solid $boxFont;
     transition: 0.3s all;
+    min-width: 150px;
+    margin-bottom: 5px;
+  }
+
+  &__buttons-container {
+    width: 50%;
+    display: inline-block;
   }
 }
